[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/AcSeS/selection_subsystem.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="SelectionSubsystem" type="Node2D"]
script = ExtResource( 1 )

[node name="SelectionBox" type="Area2D" parent="."]
collision_mask = 2
input_pickable = false

[node name="SelectionBoxCollision" type="CollisionShape2D" parent="SelectionBox"]
shape = SubResource( 1 )

[connection signal="body_entered" from="SelectionBox" to="." method="_on_SelectionBox_body_entered"]
[connection signal="body_exited" from="SelectionBox" to="." method="_on_SelectionBox_body_exited"]
